# search

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  FACETS_PLAN.md  LICENSE  NOTICE  PLAN.md  README.md  docker-compose.yml
.github/workflows/: bench-evidence.yml  ci-docs-fastpass.yml  ci.yml  docker-publish.yml  pypi-publish.yml  release-dockerhub.yml  stress.yml
bench/: aws-first-query-runbook.md
bench/results/: beir_multivector_embeddings_manifest.jsonl  beir_multivector_objcache.md  cold_vs_warm.md  cold_vs_warm_aws.md  cold_vs_warm_realistic.md  first_query_profile.md  first_query_profile_objcache.md  first_query_profile_smoke.md  index_cache_cache-disabled-cold.md  index_cache_current-firn.md  index_cache_warm-index-cache.md  semantic_cache_profile.md  serialisation.md
bench/results/beir_multivector_raw/: README.md
bench/results/beir_multivector_raw/cache_ab_fiqa/: cold-off.json  cold-on.json  evict-256MiB.json  evict-populate.json  warm-off-populate.json  warm-off.json  warm-on-populate.json  warm-on.json  warm-process-populate.json  warm-process.json
bench/results/beir_multivector_raw/exact_vs_indexed_variance/: arguana_exact.json  arguana_indexed_run1.json  arguana_indexed_run2.json  arguana_indexed_run3.json  scidocs_exact.json  scidocs_indexed_run1.json
bench/results/recall/: README.md
cli/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go
cli/cmd/: browse.go  compact.go  delete.go  env.go  facet.go  get.go  health.go  helpers.go  helpers_test.go  index.go  info.go  ls.go  metrics.go  op.go  operations.go  query.go  root.go  upsert.go  warmup.go
cli/internal/client/: client.go  client_test.go  types.go
cli/internal/config/: config.go  config_test.go  resolve.go
cli/internal/metrics/: metrics.go  metrics_test.go
cli/internal/output/: output.go  output_test.go
cli/internal/tui/: document.go  documents.go  helpers.go  info.go  model.go  namespaces.go  preview.go  styles.go
crates/firnflow-api/: Cargo.toml
crates/firnflow-api/src/: config.rs  error.rs  handlers.rs  lib.rs  operations.rs  state.rs
crates/firnflow-api/tests/: api_auth.rs  api_body_limit.rs  api_compact.rs  api_delete.rs  api_facet.rs  api_fts.rs  api_import.rs  api_index.rs  api_index_num_bits.rs  api_metrics.rs  api_multivector.rs  api_namespace_info.rs  api_operations.rs  api_query_filter.rs  api_query_projection.rs  api_scalar_index.rs  api_semantic_cache.rs
crates/firnflow-api/tests/common/: mod.rs
crates/firnflow-bench/: Cargo.toml
crates/firnflow-bench/src/: main.rs
crates/firnflow-core/: Cargo.toml
crates/firnflow-core/benches/: serialisation.rs
crates/firnflow-core/src/: cachebackend.rs  error.rs  lib.rs  manager.rs  metrics.rs  object_cache.rs  query.rs  result.rs  service.rs
crates/firnflow-core/src/cache/: invalidation.rs  layer.rs  mod.rs  semantic.rs
crates/firnflow-core/src/cachebackend/: foyer.rs  key.rs  mod.rs  noop.rs
crates/firnflow-core/tests/: cache_restart_staleness.rs  cachebackend_foyer_offline.rs  cachebackend_foyer_warm_cold.rs  cachebackend_session_probe.rs  manager_connection_pool.rs  manager_idempotent_upsert.rs  manager_import.rs  manager_local_fs.rs  manager_multivector.rs  manager_namespace_info.rs  manager_per_namespace_dim.rs  manager_upsert_query.rs  object_cache_s3_smoke.rs  object_store_counters_s3.rs  service_cache_aside.rs  service_facet.rs  service_query_smoke.rs  service_result_projection.rs  service_semantic_cache.rs
crates/hevsearch-api/: Cargo.toml
crates/hevsearch-api/src/: auth.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  rate_limit.rs  state.rs
crates/hevsearch-api/tests/: api_auth.rs  api_body_limit.rs  api_compact.rs  api_delete.rs  api_exact_knn.rs  api_facet.rs  api_fts.rs  api_import.rs  api_index.rs  api_index_num_bits.rs  api_list.rs  api_metrics.rs  api_multivector.rs  api_namespace_info.rs  api_namespaces.rs  api_operations.rs  api_pool.rs  api_query_filter.rs  api_query_projection.rs  api_rate_limit.rs  api_scalar_index.rs  api_semantic_cache.rs  api_smoke.rs  api_string_ids.rs  api_warmup.rs  config_storage_root.rs
crates/hevsearch-api/tests/common/: mod.rs
crates/hevsearch-bench/: Cargo.toml
crates/hevsearch-bench/src/: lib.rs  main.rs  recall.rs
crates/hevsearch-core/: Cargo.toml
crates/hevsearch-core/benches/: serialisation.rs
crates/hevsearch-core/src/: analyzer.rs  error.rs  lib.rs  manager.rs  metrics.rs  namespace.rs  object_cache.rs  query.rs  result.rs  service.rs  storage_root.rs  vector.rs
crates/hevsearch-core/tests/: cache_invalidation.rs  cache_restart_staleness.rs  gcs_native_connect.rs  lance_concurrent_writes.rs  manager_connection_pool.rs  manager_idempotent_upsert.rs  manager_import.rs  manager_list.rs  manager_local_fs.rs  manager_multivector.rs  manager_namespace_info.rs  manager_per_namespace_dim.rs  manager_upsert_query.rs  object_cache_s3_smoke.rs  s3_conditional_writes.rs  service_cache_aside.rs  service_facet.rs  service_query_filter.rs  service_query_smoke.rs  service_result_projection.rs  service_semantic_cache.rs
docs/: CNAME  api.html  architecture.html  configuration.html  deployment.html  index.html  main.js  monitoring.html  quickstart.html  style.css
docs/rfcs/: 0001-alyze-tokenizer.md  0002-remove-auth.md  0003-row-delete.md  0004-fuzzy-fts.md  0005-arbitrary-row-ids.md  0006-configurable-distance-metric.md  0007-point-fetch-and-nearest-to-id.md  0008-bulk-ingest-upsert-and-pipeline.md  0009-pluggable-vector-index-type.md  0010-late-interaction-storage.md  0011-recall-and-build-benchmark-harness.md  0012-lsn-read-consistency.md  0013-small-write-delta-persistence.md  0014-exact-knn-query-mode.md  README.md
examples/: README.md  clip_search.py  quickstart.py  requirements.txt  run.sh  setup.sh
python/: Cargo.toml  README.md  pyproject.toml
python/firn/: __init__.py  _native.pyi
python/hevsearch/: __init__.py  _native.pyi
python/src/: lib.rs
python/tests/: test_firn.py  test_hevsearch.py
scripts/: cargo  demo.sh  fetch_ann_datasets  maturin
(+37 files in other folders)
