[workspace]
resolver = "2"
members = [
    "crates/firnflow-core",
    "crates/firnflow-api",
    "crates/firnflow-bench",
    "python",
]

[workspace.package]
version = "0.8.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
# Vector + FTS search engine on object storage.
# Pinned exact per project conventions — bumps are a read-the-changelog event.
# `aws` feature registers the S3 object store provider that lance-io
# otherwise ships turned off through lancedb's transitive deps.
# `gcs` registers the native Google Cloud Storage backend so
# `lancedb::connect("gs://bucket")` resolves to GoogleCloudStorage
# rather than failing with "No object store provider found".
lancedb = { version = "=0.29.0", features = ["aws", "gcs"] }
lance = "=6.0.0"

# Arrow — pinned to the major that lance 6.0.0 requires (^58).
# lancedb 0.29.0's workspace pins arrow* = "58.0.0" exactly; matching
# the minor keeps the dependency graph on what upstream tested.
arrow-array = "58"
arrow-schema = "58"

# `object_store` — lance-io 6.0.0 still takes `^0.12.0`. Used by the
# DELETE path in `NamespaceManager` to list and delete the namespace
# prefix; lance uses it internally for every storage operation. `gcp`
# enables the native Google Cloud Storage client (OAuth2 /
# service-account JSON) so the delete path can follow `lancedb` onto
# a `gs://` bucket without going back through the broken GCS
# S3-interop layer.
object_store = { version = "0.12", features = ["aws", "gcp"] }

# Hybrid RAM + NVMe cache.
foyer = { version = "0.22", features = ["serde"] }

# Async runtime.
tokio = { version = "1", features = ["full"] }

# Web framework.
axum = "0.8"
# `util` feature is required for `tower::ServiceExt::oneshot`, which
# the firnflow-api smoke test uses to drive the router without
# spinning up a real TCP listener.
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
# Token-bucket rate limiting on the protected sub-router. Keys on
# either a validated `Principal` extension (post-auth) or peer IP
# (pre-auth coarse limiter). 0.7 is the latest line that works
# against axum 0.8 + tower 0.5; later majors track newer axum.
tower_governor = "0.7"
# tower_governor's underlying limiter. Named explicitly so we can
# spell `NoOpMiddleware` in a type alias — tower_governor does not
# re-export it.
governor = "0.8"

# Constant-time secret comparison. Already pulled in transitively
# elsewhere; named explicitly so the auth code doesn't depend on
# someone else's transitive choice.
subtle = "2"

# Serialisation.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }

# Concurrent collections.
dashmap = "6"

# Time-sortable opaque identifiers for background operation handles.
uuid = { version = "1", features = ["v7"] }

# Hashing.
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Errors.
thiserror = "2"
anyhow = "1"

# AWS SDK (used for the conditional-write pre-flight and any direct S3 ops;
# note lancedb brings its own `object_store`-based S3 client internally).
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }

# Async stream utilities — needed where we consume lancedb's
# `SendableRecordBatchStream` (collect into `Vec<RecordBatch>`).
futures = "0.3"

# Observability.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
