[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "firn"
version = "0.1.0"
description = "Multi-tenant hybrid (vector + full-text) search on object storage, embeddable in-process."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Gordon Murray" }]
keywords = ["vector-search", "full-text-search", "hybrid-search", "object-storage", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database :: Database Engines/Servers",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://firnflow.io"
Repository = "https://github.com/gordonmurray/firnflow"

[tool.maturin]
module-name = "firn._native"
python-source = "."
features = ["pyo3/extension-module"]
