[package]
name = "firnflow-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "firnflow axum REST server."

[lib]
path = "src/lib.rs"

[[bin]]
name = "firnflow-api"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tower.workspace = true
tower_governor.workspace = true
governor.workspace = true
subtle.workspace = true
dashmap.workspace = true
uuid.workspace = true
firnflow-core = { path = "../firnflow-core" }

[dev-dependencies]
tempfile = "3"
